# apohara-themis

./: .gitignore  .vercelignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  ROADMAP.md  ac-measurements.json  clippy.toml  deny.toml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  vercel.json
.claude/: memory-routing-protocol.md  settings.json
.claude/rules/: coding-style.md  git-workflow.md  karpathy-guidelines.md  performance.md  security.md  testing.md  visual-verdict.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
.playwright-mcp/: page-2026-06-12T22-57-59-255Z.yml
agents/: Dockerfile  MockPydanticAIAgent.py  README.md  __init__.py  a2a_server.py  bench_runner.py  compliance_reviewer.py  invoice_validator.py  requirements.txt
agents/peers/: peer_pydantic_ai.py
bench/: invoicenet_50_results.json
crates/themis-agents/: Cargo.toml
crates/themis-agents/src/: demo_narrator.rs  extractor.rs  fraud_auditor.rs  gaap_classifier.rs  llm.rs  regression_tester.rs
crates/themis-band-client/: Cargo.toml  agents.yaml
crates/themis-band-client/src/: fleet.rs  lib.rs  python_bridge.rs  signed_message.rs  socket.rs  trust_gate.rs
crates/themis-band-client/tests/: band_hello_world.rs  trust_gate_e2e.rs
crates/themis-bench/: Cargo.toml
crates/themis-bench/data/adult_income/: adult_income.csv
crates/themis-bench/data/czech_bank/: czech_bank.csv
crates/themis-bench/data/invoicenet/: invoicenet.csv
crates/themis-bench/src/: datasets.rs  lib.rs
crates/themis-bench/src/datasets/: generator.rs
crates/themis-bench/tests/: datasets.rs
crates/themis-compliance/: Cargo.toml
crates/themis-compliance/src/: aibom.rs  dora.rs  eu_ai_act.rs  featherless_metrics.rs  framework.rs  inv15.rs  iso_23894.rs  iso_42001.rs  lib.rs  nist_ai_rmf.rs  owasp_agentic.rs  sarif_merge.rs  service.rs
crates/themis-compliance/tests/: compliance_dashboard.rs  inv15_corpus.rs  regulatory_completion.rs
crates/themis-compressor/src/: classifier.rs
crates/themis-evidence/: Cargo.toml
crates/themis-evidence/src/: chain.rs  lib.rs  packet.rs  rekor.rs  rekor_v2.rs  sealchain_wrap.rs  signer.rs  timestamp.rs
crates/themis-evidence/tests/: iso_42001.rs  timestamp_real_verify.rs  verify_5_invoices.rs  verify_binary.rs
crates/themis-frontend/: Cargo.toml
crates/themis-frontend/src/: art50_banner.rs  lib.rs
crates/themis-frontend/static/: app.css  app.js  compliance.html  index.html  tokens.css
crates/themis-orchestrator/: Cargo.toml
crates/themis-orchestrator/src/: a2a_handler.rs  band_live.rs  concurrency.rs  context.rs  events.rs  http.rs  human_guard.rs  isolation.rs  jcr_gate.rs  keyring.rs  lib.rs  llm_backend.rs  mcp_proxy.rs  orchestrator.rs  packet.rs  pdf.rs  rekor_backend.rs  room.rs  routing.rs  routing_config.rs  sandbox.rs  subprocess.rs  tenants.rs  test_support.rs
crates/themis-orchestrator/tests/: a2a_discovery.rs  aiml_wiremock_e2e.rs  art50_compliance.rs  band_cross_account_chaos.rs  band_real_integration.rs  circuit_breaker.rs  context_invariants.rs  demo_data_loads.rs  honesty_auditor.rs  http_e2e.rs  invoicenet_50_bench.rs  mcp_proxy_e2e.rs  pdf_halt_visual.rs  pdf_qr_code.rs  property_chain.rs  public_bench.rs  sandbox_enforcement.rs  sealchain_wrap_e2e.rs  sealed_packet_rekor.rs  snapshot_compliance.rs
crates/vouch-agents/: pyproject.toml
crates/vouch-agents/src/: evidence_clerk.py  orchestrator.py  vendor_researcher.py
crates/vouch-agents/tests/: test_approval_manager.py  (+2 more)
crates/vouch-evidence/: Cargo.toml
crates/vouch-frontend/: Cargo.toml
docs/: COMPLIANCE-FINAL.md  REFERENCES.md  SPEC.md  US-05-measurement-gate.md  band-room-screenshot.md  slides.md  submission-final.md  themis-baabar-design.md  threat-model.md  video-script.md  video-v5-script.md  video-v5.md
docs/adr/: 0010-rekor-v2-client.md
scripts/: build_pitch_deck.py  check-binary-size.sh  check-no-apohara.sh  install-pre-commit.sh  pre-commit.sh  reconcile-lib-rs.sh  render_agent_config.py  run_peer_pydantic_ai.sh  start-codesearch.sh  themis-bootstrap.py  vercel-build.sh  verify-themis.mjs
themis-agentgateway/ConfigMap/: config.yaml
(+30 files in other folders)
