[workspace]
resolver = "2"
members = [
    "crates/*",
    # C-15 / AC15: cross-domain 1K bench harness. Separate crate to
    # keep the bench binary hermetic (no async, no LLM, no
    # orchestrator) and CI-fast.
    "crates/themis-bench",
    # S-03 / AC-3.7: offline packet verifier binary.
    "bin/vouch-verify",
]

# Python-only directories under crates/ that have no Cargo.toml and
# must not be picked up by the `crates/*` glob.
exclude = [
    "crates/vouch-agents",
    "crates/themis-agents-py",
    "crates/site",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
repository = "https://github.com/SuarezPM/apohara-themis"

[workspace.dependencies]
# Internal crates
themis-compressor = { path = "crates/themis-compressor" }
themis-orchestrator = { path = "crates/themis-orchestrator" }
themis-agents = { path = "crates/themis-agents" }
themis-evidence = { path = "crates/themis-evidence" }
themis-band-client = { path = "crates/themis-band-client" }
themis-compliance = { path = "crates/themis-compliance" }
themis-frontend = { path = "crates/themis-frontend" }

# S-03 VOUCH evidence layer
vouch-chain = { path = "crates/vouch-chain" }
vouch-evidence = { path = "crates/vouch-evidence" }
vouch-gate = { path = "crates/vouch-gate" }
vouch-receipt = { path = "crates/vouch-receipt" }
vouch-aibom = { path = "crates/vouch-aibom" }
vouch-compliance = { path = "crates/vouch-compliance" }
vouch-orchestrator = { path = "crates/vouch-orchestrator" }

# External deps for orchestrator (US-007 concurrency scheduler)
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync"] }

# Hashing for Prefix Salt Planner (US-006)
sha2 = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
